--- a/game.css
+++ b/game.css
@@ -1,13 +1,13 @@
 body
 {
-	background: lightblue;
+	background:midnightblue;
 }
 
 	.login_div1 , .login_div2
 	{
-		background: white;
+		background:skyblue;
 		padding: 10px;
-		float: none;
+		float:right;
 		border-radius: 15px;
 	}
 
@@ -27,10 +27,11 @@ body
 }
 #output
 {
-background: white;
+background:royalblue;
 border-radius: 10px;
-border-top: 10px solid #AA4465;
+border-top: 10px solid aliceblue;
 padding: 10px;
 float: none;
 text-align: left;
+color :aqua;
 }
